# zed-rdf

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml
crates/datalog-syntax/: Cargo.toml
crates/datalog-syntax/fuzz/: Cargo.toml
crates/datalog-syntax/fuzz/fuzz_targets/: parse_datalog.rs
crates/datalog-syntax/src/: ast.rs  encode.rs  lexer.rs  lib.rs  parser.rs
crates/datalog-syntax/tests/: api_surface.rs  property_tests.rs  syntax.rs
crates/rdf-diagnostics/: Cargo.toml  README.md
crates/rdf-diagnostics/src/: bag.rs  diagnostic.rs  lib.rs  lsp.rs  render.rs  severity.rs  span.rs
crates/rdf-diagnostics/tests/: lsp_bridge.rs  proptest.proptest-regressions  proptest.rs  public_api.rs
crates/rdf-format/: Cargo.toml
crates/rdf-format/src/: lib.rs
crates/rdf-format/tests/: idempotency.rs  round_trip.rs  snapshots.rs
crates/rdf-iri/: Cargo.toml
crates/rdf-iri/.claude-flow/data/: pending-insights.jsonl
crates/rdf-iri/fuzz/: .gitignore  Cargo.toml
crates/rdf-iri/fuzz/fuzz_targets/: normalise_idempotence.rs  parse.rs  resolve.rs
crates/rdf-iri/src/: diagnostic.rs  lib.rs  normalise.rs  parse.rs  parser_impl.rs  resolve.rs  tests.rs
crates/rdf-iri/tests/: probe.rs  proptest.rs
crates/rdf-jsonld/: Cargo.toml
crates/rdf-jsonld/src/: context.rs  error.rs  lib.rs  to_rdf.rs
crates/rdf-lsp/: Cargo.toml
crates/rdf-lsp/benches/: highlight.rs
crates/rdf-lsp/src/: dispatch.rs  incremental.rs  lib.rs  main.rs  rename.rs  semantic_tokens.rs
crates/rdf-lsp/src/features/: completion.rs  diagnostics.rs  document_symbols.rs  formatting.rs  goto_definition.rs  hover.rs  mod.rs
crates/rdf-lsp/tests/: feature_stubs.rs  language_detection.rs  phase_g.rs  server_api.rs
crates/rdf-lsp/tests/g/: rename_code_actions.rs  semantic_tokens.rs
crates/rdf-n3/: Cargo.toml
crates/rdf-n3/src/: iri.rs  lexer.rs  lib.rs  parser.rs
crates/rdf-n3/tests/: snapshot.rs
crates/rdf-ntriples/: Cargo.toml
crates/rdf-ntriples/fuzz/: Cargo.toml
crates/rdf-ntriples/fuzz/fuzz_targets/: parse_nquads.rs  parse_ntriples.rs
crates/rdf-ntriples/src/: lib.rs
crates/rdf-ntriples/tests/: fixtures.rs  proptest.rs
crates/rdf-turtle/: Cargo.toml
crates/rdf-turtle/examples/: parse_turtle.rs
crates/rdf-turtle/fuzz/: Cargo.toml
crates/rdf-turtle/fuzz/fuzz_targets/: bnode_scope_invariants.rs  parse_trig.rs  parse_turtle.rs
crates/rdf-turtle/src/: diag.rs  grammar.rs  iri.rs  lexer.rs  lib.rs
crates/rdf-turtle/tests/: proptest.rs  smoke.rs
crates/rdf-vocab/: Cargo.toml
crates/rdf-vocab/examples/: vocab_lookup.rs
crates/rdf-vocab/src/: dcat.rs  dcterms.rs  foaf.rs  lib.rs  owl.rs  prov.rs  rdf.rs  rdfs.rs  schema.rs  sh.rs  skos.rs  xsd.rs
crates/rdf-vocab/tests/: api_surface.rs  coverage.rs
crates/rdf-xml/: Cargo.toml
crates/rdf-xml/fuzz/: Cargo.toml
crates/rdf-xml/fuzz/fuzz_targets/: parse_rdfxml.rs
crates/rdf-xml/src/: lib.rs  parser.rs
crates/rdf-xml/tests/: ALLOWLIST.md  w3c_manifest.rs
crates/shex-syntax/fuzz/: Cargo.toml
crates/shex-syntax/fuzz/fuzz_targets/: parse_shex.rs
crates/sparql-syntax/: Cargo.toml  README.md
crates/sparql-syntax/examples/: parse_sparql.rs
crates/sparql-syntax/fuzz/: Cargo.toml
crates/sparql-syntax/fuzz/fuzz_targets/: parse_sparql.rs
crates/sparql-syntax/src/: ast.rs  diag.rs  encode.rs  grammar.rs  lexer.rs  lib.rs
crates/sparql-syntax/tests/: adversary_sparql.rs  encode_snapshots.rs  scope_checks.rs  w3c_syntax.rs
crates/sparql-syntax/tests/snapshots/: ask_query.txt  construct_query.txt  delete_where.txt  insert_data.txt  select_with_projection_and_where.txt
crates/syntax/rdf-jsonld-shadow/: Cargo.toml
crates/syntax/rdf-jsonld-shadow/src/: lib.rs
crates/syntax/rdf-ntriples-shadow/: Cargo.toml
crates/syntax/rdf-ntriples-shadow/src/: diagnostics.rs  lexer.rs  lib.rs  nquads.rs  ntriples.rs  unescape.rs
crates/syntax/rdf-ntriples-shadow/tests/: w3c_fixtures.rs
crates/syntax/rdf-turtle-shadow/: Cargo.toml
crates/syntax/rdf-turtle-shadow/src/: bnode.rs  diagnostics.rs  iri.rs  lexer.rs  lib.rs  literal.rs  trig.rs  turtle.rs  unescape.rs
crates/syntax/rdf-turtle-shadow/tests/: integration.rs
crates/syntax/rdf-xml-shadow/: Cargo.toml
crates/syntax/rdf-xml-shadow/src/: lib.rs  parser.rs
crates/syntax/sparql-syntax-shadow/: Cargo.toml  README.md
crates/syntax/sparql-syntax-shadow/src/: ast.rs  encode.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/testing/deny-regression/: Cargo.toml
crates/testing/deny-regression/src/: lib.rs
crates/testing/deny-regression/tests/: no_banned_runtime_deps.rs
crates/testing/rdf-diff/: ALLOWLIST.md  Cargo.toml
crates/testing/rdf-diff-oracles/: Cargo.toml
crates/testing/rdf-diff-oracles/src/: lib.rs  oxjsonld_adapter.rs  oxrdfxml_adapter.rs  oxsparql_adapter.rs  oxttl_adapter.rs  sophia_adapter.rs
crates/testing/rdf-diff/src/: lib.rs
crates/testing/rdf-diff/tests/: adversary_iri.rs  adversary_nt.rs  adversary_phase_b.rs  adversary_sparql.rs  adversary_ttl.rs  phase_b_shadow_diffs.rs  phase_b_snapshots.rs  properties.rs  snapshots.rs  xtask_verify.rs
crates/testing/rdf-diff/tests/adversary-iri/: README.md  iri-001-remove-dots-above-root.ttl  (+8 more)
extensions/zed-rdf/: Cargo.toml  extension.toml
extensions/zed-rdf/grammars/: GRAMMAR-PINS.md
extensions/zed-rdf/languages/datalog/: config.toml
extensions/zed-rdf/languages/json-ld/: config.toml
extensions/zed-rdf/languages/n3/: config.toml
extensions/zed-rdf/languages/nquads/: config.toml
extensions/zed-rdf/languages/ntriples/: config.toml  highlights.scm
extensions/zed-rdf/languages/rdf-xml/: config.toml
extensions/zed-rdf/languages/shex/: config.toml  highlights.scm
extensions/zed-rdf/languages/sparql/: config.toml  highlights.scm
extensions/zed-rdf/languages/trig/: config.toml
extensions/zed-rdf/languages/trix/: config.toml
extensions/zed-rdf/languages/turtle/: config.toml  highlights.scm
extensions/zed-rdf/src/: lib.rs
xtask/verify/: Cargo.toml
xtask/verify/src/: main.rs  manifest.rs
(+271 files in other folders)
