# Workspace root for zed-rdf — a Zed extension + Rust LSP for the RDF
# family of languages. Crate topology is documented in
# docs/sparc/03-architecture.md and ADR-0002. Members are added as each
# crate lands per docs/sparc/04-refinement.md.

[workspace]
resolver = "3"
members = [
    # Phase A foundations (ADR-0017 §4, ADR-0018 Wave 1) — shared
    # diagnostic-reporting infrastructure upstream of every parser.
    # Claimed by `phaseA-rdf-diagnostics`.
    "crates/rdf-diagnostics",
    # verification-v1 sweep (ADR-0020 §1.4) — frozen trait surface for the
    # diff harness, shadow parsers, and oracle adapters. Kept under
    # crates/testing/ because it is test-only; main-parser builds do not
    # depend on it.
    "crates/testing/rdf-diff",
    # Shadow parsers — second independent implementations used by the
    # verification-v1 diff harness (ADR-0019 §3, ADR-0020 §1.4).
    "crates/syntax/rdf-iri-shadow",
    # Shadow N-Triples + N-Quads parser (cohort-A, v1-shadow-nt).
    # Disjoint implementation for diff-harness verification.
    "crates/syntax/rdf-ntriples-shadow",
    # Shadow SPARQL 1.1 parser (cohort-A, v1-shadow-sparql).
    # Disjoint grammar-only implementation for diff-harness verification.
    "crates/syntax/sparql-syntax-shadow",
    # Shadow Turtle 1.1 + TriG parser (cohort-A, v1-shadow-ttl).
    # Disjoint implementation for diff-harness verification.
    "crates/syntax/rdf-turtle-shadow",
    # Main Turtle 1.1 + TriG parser (ADR-0017 Phase A, `phaseA-rdf-turtle`).
    # Independent of the shadow; both implement `rdf_diff::Parser` and are
    # compared by the diff harness (ADR-0020 §1.4).
    "crates/rdf-turtle",
    # Main Phase-A N-Triples + N-Quads parser (ADR-0017 §4,
    # `phaseA-rdf-ntriples`). Disjoint from `rdf-ntriples-shadow` above;
    # both implement `rdf_diff::Parser` and are compared by the diff
    # harness (ADR-0020 §1.4).
    "crates/rdf-ntriples",
    # Main RFC 3987 IRI parser / normaliser / RFC 3986 §5 resolver
    # (ADR-0017 Phase A, `phaseA-rdf-iri`). Independent of the shadow at
    # `crates/syntax/rdf-iri-shadow`; both implement `rdf_diff::Parser`
    # and are compared by the diff harness (ADR-0020 §1.4).
    "crates/rdf-iri",
    # ADR-0019 §1 enforcement: asserts mechanically that no banned
    # third-party RDF/SPARQL parser crate (oxttl, sophia_*, …) leaks
    # into a workspace member's runtime dependency closure. Belt-and-
    # braces companion to the `cargo-deny` gate in `deny.toml`.
    "crates/testing/deny-regression",
    # xtask runner for the verification-v1 PR gate (ADR-0020
    # §Acceptance). `cargo run -p xtask -- verify` is the CI entry
    # point and uploads per-format DiffReports on failure. Claimed by
    # `v1-ci-wiring`.
    "xtask/verify",
    # Reference-parser oracle adapters (ADR-0019 §1 carve-out). Each
    # upstream parser (oxttl, oxrdfxml, oxjsonld, spargebra, sophia_*)
    # is pulled strictly as a `[dev-dependency]` of this crate; a
    # `cargo tree -e normal` on it must show zero oracle edges. Claimed
    # by `v1-oracle-rust`.
    "crates/testing/rdf-diff-oracles",
    # Main SPARQL 1.1 grammar parser (ADR-0017 §4, ADR-0018 Phase C,
    # `phaseC-sparql`). Disjoint from `sparql-syntax-shadow`; both
    # implement `rdf_diff::Parser` and are compared by the diff
    # harness (ADR-0020 §1.4). Grammar-only — no execution semantics.
    "crates/sparql-syntax",
    # Per-format serialisers (NT/NQ/TTL/TriG) — round-trip partner of the
    # Phase-A parsers (ADR-0017 Phase A, `pa-rdf-format`). Output matches
    # the canonical form defined by `rdf_diff::Facts::canonicalise`.
    "crates/rdf-format",
    # Phase B main parsers (ADR-0021 §3). Stubs land in pre-flight;
    # agents `pb-rdf-xml`, `pb-rdf-jsonld`, `pb-rdf-trix`, `pb-rdf-n3`
    # fill the implementations.
    "crates/rdf-xml",
    "crates/rdf-jsonld",
    "crates/rdf-trix",
    "crates/rdf-n3",
    # Phase B shadow parsers (ADR-0021 §4, ADR-0019 §3). Agents
    # `pb-shadow-rdfxml` and `pb-shadow-jsonld` fill these independently.
    "crates/syntax/rdf-xml-shadow",
    "crates/syntax/rdf-jsonld-shadow",
    # Phase D utility syntax parsers (ADR-0023 §1). Stubs land in pre-flight;
    # agents `pd-shex-syntax` and `pd-datalog-syntax` fill the implementations.
    "crates/datalog-syntax",
    "crates/shex-syntax",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/henrikpettersen/zed-rdf"
homepage = "https://github.com/henrikpettersen/zed-rdf"
authors = ["Henrik Pettersen <henrik.pettersen@gmail.com>"]
# Per ADR-0001 we target latest stable with no MSRV commitment. This
# `rust-version` field is informational only and bumped freely.
rust-version = "1.86"

# Workspace-level lints, inherited via `[lints] workspace = true` in
# each crate. Per ADR-0001 we forbid unsafe by default; per ADR-0005 we
# want missing-docs to surface.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Shared dependency versions. Crates inherit via
# `some_crate = { workspace = true }`. The list grows with each phase.
# Curated per ADR-0004 — additions require an ADR amendment.
[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# ADR-0004 runtime IETF-RFC carve-out (patch 2026-04-19): RFC 3490 /
# UTS 46 domain-name ToASCII (Punycode + nameprep). Consumed by
# `rdf-iri` for RFC 3987 §3.1 host mapping. `default-features` are kept
# on so the precomputed Unicode tables ship with the crate — otherwise
# we'd need to vendor them ourselves, defeating the carve-out.
idna = "1"
# ADR-0021 Phase B infrastructure deps. `quick-xml` is the streaming
# XML tokeniser for `rdf-xml` and `rdf-trix`. `serde_json` is the JSON
# parser for `rdf-jsonld`. Both are runtime deps with no oracle-crate
# status (they are not reference parsers per ADR-0019 §1).
quick-xml = "0.37"
serde_json = "1"
