[package]
name = "rdf-iri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Main RFC 3987 IRI parser, normaliser, and RFC 3986 §5 resolver for the zed-rdf workspace (ADR-0017 Phase A, ADR-0020 §1.4)."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
rdf-diff = { path = "../testing/rdf-diff", version = "0.0.0" }
thiserror = { workspace = true }
# RFC 3490 / UTS 46 `ToASCII` for RFC 3987 §3.1 host mapping. Admitted
# to the runtime allow-list by ADR-0004's runtime IETF-RFC carve-out
# (patch 2026-04-19). See `docs/spec-readings/iri/
# idna-host-normalisation-pin.md` for the fallback behaviour.
idna = { workspace = true }

# Property tests (ADR-0004 / ADR-0006 §Layers-2). Kept dev-only: the main
# parser carries no runtime edge to `proptest`.
[dev-dependencies]
proptest = "1"
