[package]
name = "rdf-jsonld"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Main JSON-LD syntax parser for the zed-rdf workspace (ADR-0021 Phase B, pb-rdf-jsonld)."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
rdf-diff = { path = "../testing/rdf-diff", version = "0.0.0" }
rdf-iri = { path = "../rdf-iri", version = "0.0.0" }
rdf-diagnostics = { path = "../rdf-diagnostics", version = "0.0.0" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
