[package]
name = "rdf-ntriples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Phase-A main N-Triples + N-Quads parser (ADR-0017 §4)."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
rdf-diff = { path = "../testing/rdf-diff", version = "0.0.0" }

# Property tests (ADR-0004 / ADR-0006 §Layers-2). Kept dev-only: the main
# parser carries no runtime edge to `proptest`.
[dev-dependencies]
proptest = "1"
