[package]
name = "rdf-xml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Main RDF/XML parser for the zed-rdf workspace (ADR-0021 Phase B, pb-rdf-xml)."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
rdf-diff = { path = "../testing/rdf-diff", version = "0.1.0" }
rdf-iri = { path = "../rdf-iri", version = "0.1.0" }
rdf-diagnostics = { path = "../rdf-diagnostics", version = "0.1.0" }
quick-xml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
