# xtask `verify` — PR-gate entry point for the verification-v1 sweep.
#
# Runs the differential harness across main + all shadow parsers + all
# enabled oracle JSON corpora and emits one `DiffReport` per format plus a
# summary under `target/verification-reports/`. Non-zero exit on any
# non-allow-listed divergence.
#
# Binary target name is `xtask` so the project convention
# `cargo run -p xtask -- verify` resolves cleanly (ADR-0020 §Acceptance).
#
# Claim (ADR-0020 §3): `xtask/verify/**`. Coordinated `Cargo.toml`
# workspace-member addition with other member-adding agents.
[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "xtask entry point for the verification-v1 PR gate (ADR-0020 §Acceptance)."

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Off by default — Phase-A carry-over: shadow crates land under feature
# `shadow` in their own manifests. Enable these here only when the
# corresponding shadow crate has its `shadow` feature turned on too.
default = []
shadow-ttl = ["rdf-turtle-shadow/shadow"]
shadow-nt = ["rdf-ntriples-shadow/shadow"]
# Phase B shadow features (ADR-0021 §4). Enabled by agents and CI when
# the shadow crates have their `shadow` feature turned on.
shadow-xml = ["rdf-xml-shadow/shadow"]
shadow-jsonld = ["rdf-jsonld-shadow/shadow"]

[dependencies]
# Frozen trait surface from the verification-v1 sweep (ADR-0020 §1.4).
# Required so the W3C-manifest runner can drive main + shadow parsers
# through a single `rdf_diff::Parser` handle and feed the result into
# `rdf_diff::diff_many`. Belt-and-braces ADR-0019 §1: `rdf-diff` itself
# has zero oracle crates in its normal graph.
rdf-diff = { path = "../../crates/testing/rdf-diff", version = "0.0.0" }

# Main parsers — used both to parse W3C Manifest files (which are Turtle
# themselves) and as the primary side of the diff. Loaded strictly via
# the frozen `rdf_diff::Parser` trait so xtask stays decoupled from any
# parser-internal state.
rdf-turtle = { path = "../../crates/rdf-turtle", version = "0.0.0" }
rdf-ntriples = { path = "../../crates/rdf-ntriples", version = "0.0.0" }

# Shadow parsers — optional second-implementation side of the diff.
# Gated behind feature flags so a main-parser build never pulls them;
# the shadow crates themselves gate their contents behind their own
# `shadow` feature (ADR-0019 §3). Must NOT read shadow memory / source.
rdf-turtle-shadow = { path = "../../crates/syntax/rdf-turtle-shadow", version = "0.0.0", optional = true }
rdf-ntriples-shadow = { path = "../../crates/syntax/rdf-ntriples-shadow", version = "0.0.0", optional = true }
# Phase B parsers and shadows (ADR-0021 §3-4). Agents wire these into
# parse_for_language once they have real implementations.
rdf-xml = { path = "../../crates/rdf-xml", version = "0.0.0" }
rdf-jsonld = { path = "../../crates/rdf-jsonld", version = "0.0.0" }
rdf-trix = { path = "../../crates/rdf-trix", version = "0.0.0" }
rdf-n3 = { path = "../../crates/rdf-n3", version = "0.0.0" }
rdf-xml-shadow = { path = "../../crates/syntax/rdf-xml-shadow", version = "0.0.0", optional = true }
rdf-jsonld-shadow = { path = "../../crates/syntax/rdf-jsonld-shadow", version = "0.0.0", optional = true }
