# cargo-fuzz harness for the datalog-syntax parser (Datalog rules + facts).
# ADR-0018 §§3–4. Out-of-workspace by design — see the sibling
# `rdf-iri/fuzz/Cargo.toml` for rationale.

[package]
name = "datalog-syntax-fuzz"
version = "0.1.0"
publish = false
edition = "2024"
autobins = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
datalog-syntax = { path = ".." }
rdf-diff = { path = "../../testing/rdf-diff" }

[[bin]]
name = "parse_datalog"
path = "fuzz_targets/parse_datalog.rs"
test = false
doc = false

[workspace]
