# cargo-fuzz harness for the rdf-ntriples parser (N-Triples + N-Quads).
# ADR-0018 §§3–4. Out-of-workspace by design — see the sibling
# `rdf-iri/fuzz/Cargo.toml` for rationale.

[package]
name = "rdf-ntriples-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
autobins = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rdf-ntriples = { path = ".." }
rdf-diff = { path = "../../testing/rdf-diff" }

[[bin]]
name = "parse_ntriples"
path = "fuzz_targets/parse_ntriples.rs"
test = false
doc = false

[[bin]]
name = "parse_nquads"
path = "fuzz_targets/parse_nquads.rs"
test = false
doc = false

[workspace]
