# cargo-fuzz harness for the shex-syntax parser (ShEx 2.x compact syntax).
# ADR-0018 §§3–4. Out-of-workspace by design — see the sibling
# `rdf-iri/fuzz/Cargo.toml` for rationale.

[package]
name = "shex-syntax-fuzz"
version = "0.1.0"
publish = false
edition = "2024"
autobins = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shex-syntax = { path = ".." }
rdf-diff = { path = "../../testing/rdf-diff" }

[[bin]]
name = "parse_shex"
path = "fuzz_targets/parse_shex.rs"
test = false
doc = false

[workspace]
