# cargo-fuzz harness for the sparql-syntax parser (SPARQL 1.1 Query + Update).
# ADR-0018 §§3–4. Out-of-workspace by design — see the sibling
# `rdf-iri/fuzz/Cargo.toml` for rationale.

[package]
name = "sparql-syntax-fuzz"
version = "0.1.0"
publish = false
edition = "2024"
autobins = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sparql-syntax = { path = ".." }
rdf-diff = { path = "../../testing/rdf-diff" }

[[bin]]
name = "parse_sparql"
path = "fuzz_targets/parse_sparql.rs"
test = false
doc = false

[workspace]
