[package]
name = "rdf-xml-shadow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Independent shadow RDF/XML parser for Phase B diff-harness verification (ADR-0021, pb-shadow-rdfxml)."

[lib]
path = "src/lib.rs"

[features]
default = []
shadow = []

[lints]
workspace = true

[dependencies]
rdf-diff = { path = "../../testing/rdf-diff", version = "0.0.0" }
quick-xml = { workspace = true }
thiserror = { workspace = true }
