[package]
name = "deny-regression"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Regression test: asserts ADR-0019 §1's runtime ban on third-party RDF/SPARQL parser crates holds across the workspace (belt-and-braces for cargo-deny)."

[lib]
path = "src/lib.rs"

[lints]
workspace = true

# The crate is test-only and deliberately has zero runtime
# dependencies — its only code is a `pub const` list of banned crate
# names shared with `deny.toml`. The integration test under `tests/`
# shells out to `cargo metadata` and parses its JSON output; the JSON
# dependency is dev-only so it does not count against the ADR-0004
# runtime closure (and `exclude-dev = true` in `deny.toml` keeps
# cargo-deny from flagging it either). See ADR-0019 §1.
[dependencies]

[dev-dependencies]
serde_json = "1"
